--- a/src/views/form.handlebars
+++ b/src/views/form.handlebars
@@ -1,8 +1,12 @@
 <h2>Create Product</h2>
-<a href="/products">Product List</a>
+
 
 <form action="/form-products" method="post">
     Name: <input type="text" name="name">
+    <br>
+    Img: <input type="text" name="image">
+    <br>
+    Description: <input type="text" name="description">
     <br>
     Price: <input type="number" name="price">
     <br>
