--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,21 +2,18 @@
 <a href="/form-products">Crear Productos</a>
 <hr>
 
-<table border="1">
-    <thead>
-        <tr>
-            <td>ID</td>
-            <td>Name</td>
-            <td>Price</td>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each products}}
-            <tr>
-                <td>{{this.id}}</td>
-                <td>{{this.name}}</td>
-                <td>{{this.price}}</td>
-            </tr>
-        {{/each}}
-    </tbody>
-</table>
+<div class="row">
+    {{#each products}}
+
+    <div class="col-sm">
+        <div class="card " style="width: 18rem;">
+            <img class="card-img-top" src="{{this.image}}" height="300" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">{{this.name}}</h5>
+                <p class="card-text">{{this.description}}</p>
+                <a href="#" class="btn btn-primary">$ {{this.price}}</a>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+</div>
