--- a/src/views/products_realtime.handlebars
+++ b/src/views/products_realtime.handlebars
@@ -1,33 +1,215 @@
+<head>
+
+    <style type='text/css'>
+       
+        .product-image { float: left; width: 20%; }
+        .product-details { float: left; width: 37%; }
+        .product-price { float: left; width: 21%;}
+        .product-quantity { float: left; width: 10%; }
+        .product-removal { float: left; width: 10%; }
+        .product-line-price { float: left; width: 12%; text-align: right; }
+        
+       
+       
+       
+       
+       
+       
+       
+       
+       
+       
+       
+       
+       
+        body {
+            padding: 0px 30px 30px 20px;
+            font-weight: 100;
+        }
+
+        h1 {
+            font-weight: 100;
+        }
+
+        /*.shopping-cart {
+            margin-top: -45px;
+        }*/
+
+        .column-labels {
+            padding-top: 15px;
+            padding-bottom: 35px;
+            margin-bottom: 15px;
+            border-bottom: 1px solid;
+           /*text-indent: -10px; */
+
+        }
+
+
+        /* Product entries */
+        .product {
+            margin-bottom: 20px;
+            padding-bottom: 10px;
+           /* border-bottom: 1px solid; */
+        }
+
+        .product .product-image {
+            text-align: center;
+        }
+
+        .product .product-image img {
+            width: 100px;
+        }
+
+
+        .product-details .product-title {
+
+            margin-right: 20px;
+            font-weight: bold;
+        }
+
+        .product-details .product-description {
+            margin: 5px 20px 5px 0;
+            line-height: 1.4em;
+        }
+
+
+        .product-quantity input {
+            width: 40px;
+        }
+
+        .remove-product {
+            border: 0;
+            padding: 4px 8px;
+            background-color: #c66;
+            color: #fff;
+            font-weight: bold;
+            font-size: 12px;
+            border-radius: 3px;
+        }
+
+        .remove-product:hover {
+            background-color: #a44;
+        }
+
+
+
+        /* Totals section */
+        .totals .totals-item {
+
+            float: right;
+            clear: both;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        .totals .totals-item label {
+            float: left;
+            clear: both;
+            width: 79%;
+            text-align: right;
+        }
+
+        .totals .totals-item .totals-value {
+            float: right;
+            width: 21%;
+            text-align: right;
+        }
+
+        .totals-item-total {
+            font-weight: bold;
+        }
+
+
+        .checkout {
+            float: right;
+            border: 0;
+            margin-top: 20px;
+            padding: 6px 25px;
+            background-color: #6b6;
+            color: #fff;
+            font-size: 25px;
+            border-radius: 3px;
+        }
+
+        .checkout:hover {
+            background-color: #494;
+        }
+    </style>
+
+
+
+</head>
+
+
 <h2>Products - Real Time</h2>
 
 <form id='myForm'>
-    Name: <input type="text" name="name">
+    Nombre: <input type="text" name="name">
     <br>
-    Price: <input type="number" name="price">
+    Producto: <input type="number" name="price">
     <br>
     <button type="submit">Enviar</button>
 </form>
 
 <hr>
 
-<table border="1">
-    <thead>
-        <tr>
-            <td>ID</td>
-            <td>Name</td>
-            <td>Price</td>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each products}}
-            <tr>
-                <td>{{this.id}}</td>
-                <td>{{this.name}}</td>
-                <td>{{this.price}}</td>
-            </tr>
-        {{/each}}
-    </tbody>
-</table>
+<section>
+    
+    <div class="shopping-cart">
+
+        <div class="column-labels">
+            <label class="product-image"  style="padding-left: 150px">ID</label>
+            <label class="product-details"  style="padding-left: 150px">Nombre</label>
+            <label class="product-price">Precio</label>
+            <label class="product-removal">Remove</label>
+            
+    </div>
+    
+    
+    {{#each products}}
+        <div class="product">
+            <div class="product-price" style="padding-left: 150px">{{this.id}}</div>
+            <div class="product-price" style="padding-left: 150px">{{this.name}}</div>
+            <div class="product-price" style="padding-left: 150px">{{this.price}}</div>
+     
+            <div class="product-removal" style="padding-left: 140px">
+                <button class="remove-product">
+                    Remove
+                </button>
+            </div>
+        </div>
+    {{/each}}
+    
+        <div class="totals">
+            <div class="totals-item">
+                <label>Subtotal</label>
+                <div class="totals-value" id="cart-subtotal">Subtotal</div>
+            </div>
+            <div class="totals-item">
+                <label>IVA (21%)</label>
+                <div class="totals-value" id="cart-tax">Monto IVA</div>
+            </div>
+            <div class="totals-item">
+                <label>Otros cargos</label>
+                <div class="totals-value" id="cart-shipping">Otros cargos</div>
+            </div>
+            <div class="totals-item totals-item-total">
+                <label>Total Final</label>
+                <div class="totals-value" id="cart-total">Total Final</div>
+            </div>
+        </div>
+
+        <button class="checkout">Comprar</button>
+
+    </div>  
+    
+ </section>   
+    
+    
+    
+  
+    
+
 
 <script src="/socket.io/socket.io.js"></script>
 <script>
@@ -43,5 +225,21 @@
         socket.emit('new-product', product)
 
     }
+
+    socket.on('reload-table', products => {
+        console.log(products)
+        const tbody = document.getElementById('tbody')
+
+        let html = '';
+        products.forEach(product => {
+            html += `<tr>
+                <th scope="row">${product.id}</th>
+                <td>${product.name}</td>
+                <td>${product.price}</td>
+            </tr>`
+        })
+
+        tbody.innerHTML = html
+    })
 
 </script>
