--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,18 +2,19 @@
 <a href="/form-products">Crear Productos</a>
 <hr>
 
-<div class="row">
+<div class="card-group">
+ 
     {{#each products}}
-
-    <div class="col-sm">
-        <div class="card " style="width: 18rem;">
-            <img class="card-img-top" src="{{this.image}}" height="300" alt="Card image cap">
+     <div class="card">
+            <img class="card-img-top" src="{{this.image}}" alt="Card image">
             <div class="card-body">
                 <h5 class="card-title">{{this.name}}</h5>
                 <p class="card-text">{{this.description}}</p>
+            </div>
+            <div>    
                 <a href="#" class="btn btn-primary">$ {{this.price}}</a>
             </div>
-        </div>
-    </div>
+       </div>     
     {{/each}}
+  
 </div>
