--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -165,7 +165,7 @@
             
     </div>
     
-    <tbody id="tbody">
+    <div id="tbody">
       {{#each products}}
         <div class="product">
             <div class="product-price" style="padding-left: 150px">{{this.id}}</div>
@@ -179,7 +179,7 @@
             </div>
         </div>
       {{/each}}
-    </tbody>
+    </div>
 
         <div class="totals">
             <div class="totals-item">
